Use testNG annotations and assertions